new colors style (demo)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,11 @@
     }
 
     .nav-link::after {
-        @apply absolute bottom-0 left-0 w-full h-[3px] bg-blue-800 scale-x-0 origin-left transition-transform duration-300;
+        @apply absolute bottom-0 left-0 w-full h-[3px] bg-[#008080] scale-x-0 origin-left transition-transform duration-300;
+        content: '';
+    }
+    .nav-link::after {
+        @apply absolute bottom-0 left-0 w-full h-[3px] bg-[#008080] dark:bg-[#FFD700] scale-x-0 origin-left transition-transform duration-300;
         content: '';
     }
 
@@ -21,7 +25,7 @@
     }
 
     .active {
-        @apply text-blue-500 font-bold;
+        @apply text-[#FFD700] font-bold;
     }
 
     .active::after {
